k8s/local/sn-app-web/sn-app-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sn-web-deployement
  labels:
    app: sn-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sn-web
  template:
    metadata:
      labels:
        app: sn-web
    spec:
      containers:
      - name: sn-web
        image: squiggsnet/sn-app-web
        resources:
          requests:
            memory: 128Mi
            cpu: 750m
          limits:
            memory: 512Mi
            cpu: "1"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sn-web-service
  labels:
    app: sn-web
spec:
  selector:
    app: sn-web
  ports:
  - port: 3000
    protocol: TCP
    name: sn-web-port
  type: NodePort
