k8s/local/sn-app-web/sn-app-web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sn-web-ingress
spec:
  backend:
    serviceName: sn-web-service
    servicePort: sn-web-port
